# KMA-MME

./: About.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test.ipynb
.streamlit/: config.toml
app/: main.py  utils.py
app/exercises/: 1_sklon.py  2_veliciny.py  3_elasticita.py  4_pavucina.py
